--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: 38.64.138.145, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 保加利亚-283.3KB/s(Youtube:不良林), server: 213.183.63.218, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇫🇷 法国-1.20MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 波兰-1.98MB/s(Youtube:不良林), server: 217.30.10.65, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇩🇪 德国-2.68MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-1.29MB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 38.86.135.27, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
-      - 保加利亚-283.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.20MB/s(Youtube:不良林)
-      - 波兰-1.98MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
 rules:
