--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-1.29MB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-597.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 波兰-325.1KB/s(Youtube:不良林), server: 217.30.10.63, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇨🇳 中国-441.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 38.86.135.27, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
+      - 波兰-325.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
