--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-597.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-325.1KB/s(Youtube:不良林), server: 217.30.10.63, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇨🇳 中国-441.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇨🇳 中国-274.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇩🇪 德国-744.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-375.7KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-597.3KB/s(Youtube:不良林)
-      - 波兰-325.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-441.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
