--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-274.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇩🇪 德国-744.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-375.7KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-422.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-2.12MB/s(Youtube:不良林), server: 213.183.51.171, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-353.0KB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-274.6KB/s(Youtube:不良林)
       - 🇩🇪 德国-744.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
